cmake_minimum_required(VERSION 3.23)
project(learn_c C)

set(CMAKE_C_STANDARD 99)

add_executable(learn_c main.c)
add_executable(narcissistic_number test/narcissistic_number.c)
add_executable(array linked_list/array.c)
add_executable(linked-list linked_list/linked-list.c)
add_executable(format_io file/format_io.c)
add_executable(binary_file file/write_binary_file.c)
add_executable(read_binary_file file/read_binary_file.c)
add_executable(print_binary file/print_binary.c)
add_executable(var program_structure/var.c)
add_executable(macro program_structure/macro.c)
add_executable(go program_structure/go.c)
add_executable(enum structure_type/enum.c)
add_executable(struct structure_type/struct.c)
add_executable(struct_of_struct structure_type/struct_of_struct.c)
add_executable(union structure_type/union.c)
add_executable(string string/string.c)
add_executable(month test/month.c)
add_executable(str_func string/func_putchar_getchar.c)
add_executable(func_strlen string/func_strlen.c)
add_executable(func_strcmp string/func_strcmp.c)
add_executable(func_strcpy string/func_strcpy.c)
add_executable(isPrime array/isPrime.c)
add_executable(def_func function/def_func.c)
add_executable(param_transfer function/param_transfer.c)
add_executable(sizeof data_type/sizeof.c)
add_executable(count array/count.c)
add_executable(search array/search.c)

add_executable(tic-tac-toe array/tic-tac-toe.c)
add_executable(get_address pointer/get_address.c)
add_executable(pointer pointer/pointer.c)